[package]
name = "study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adder = { path = "adder" }

[workspace]
members = [
    "adder",
    "ch02_guessing_game",
    "ch04_ownership",
    "ch13_iterators_and_closures",
    "ch15_smart_pointers",
    "ch16_oncurrency",
]
